--- a/db.properties
+++ b/db.properties
@@ -1,3 +1,3 @@
 datasource.username=root
 datasource.password=123456
-datasource.url=jdbc:mysql://10.114.24.237:3306/rebate?characterEncoding=utf8
+datasource.url=jdbc:mysql://xxxx:3306/rebate?characterEncoding=utf8
