--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </dependencies>
   </dependencyManagement>
 
-  <groupId>com.ppdai.tars</groupId>
+  <groupId>com.xx.tars</groupId>
   <artifactId>merchant-rebate</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
